<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RegisterActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <ImageView
        android:layout_width="@dimen/logo_w_h"
        android:layout_height="@dimen/logo_w_h"
        android:layout_marginBottom="30dp"
        android:src="@mipmap/ic_launcher"
        />
<android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_register_email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="@android:color/white"/>

</android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_register_password"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:focusableInTouchMode="true"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:textColor="@color/white"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_register"
        style="@style/Base.TextAppearance.AppCompat.Small"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:text="@string/action_sign_in_short"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_reset_password"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:text="@string/btn_forgot_password"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"/>

    <!-- Link to Login Screen -->

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_sign_in"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:text="@string/btn_link_to_login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"/>

</LinearLayout>

    <ProgressBar
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/pb_register_progress_bar"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone"/>

</android.support.design.widget.CoordinatorLayout>
